# Cmake-Tutorials

./: README.md
tiny1/: CMakeLists.txt
tiny10/: CMakeLists.txt
tiny10/src/: main.cpp
tiny2/: CMakeLists.txt
tiny3/include/: main_include.h
tiny3/src/: CMakeLists.txt  main.cpp
tiny4/: CMakeLists.txt
tiny4/include/: main_include.h
tiny4/src/: CMakeLists.txt  helloB.cpp  main.cpp
tiny5/: CMakeLists.txt
tiny5/src/: CMakeLists.txt  main.cpp
tiny6/: CMakeLists.txt
tiny6/src/hellofunc/: helloA.cpp
tiny6_withConfig/include/: config.h  main_include.h
tiny6_withConfig/src/: main.cpp  powertest.cpp
tiny6_withQt/: CMakeLists.txt
tiny6_withQt/qt_build/: CMakeCache.txt  Makefile  TINY.cbp  cmake_install.cmake
tiny6_withQt/qt_build/src/: Makefile  cmake_install.cmake
tiny6_withQt/src/: CMakeLists.txt
tiny7/: CMakeLists.txt
tiny7/src/: CMakeLists.txt
tiny7/tmp/install1/: autorun.sh
tiny8_installLibs/: autorun.sh
tiny8_installLibs/lib/: libhelloA.so.1.0.0  libhelloB.so.1.0.0
tiny8_installLibs/src/: CMakeLists.txt  main.cpp
tiny8_installLibs/src/math/: power.h
tiny8_testInstalledLibs/: CMakeLists.txt  autorun.sh
tiny8_testInstalledLibs/include/hello/: helloB.h
tiny8_testInstalledLibs/lib/: CMakeLists.txt
tiny8_testInstalledLibs/lib/hellofunc/: helloA.h
tiny8_testInstalledLibs/src/: CMakeLists.txt  main.cpp  powertest.cpp
tiny9_installLocalLibs/: CMakeLists.txt  autorun.sh
tiny9_installLocalLibs/src/: CMakeLists.txt  main.cpp  powertest.cpp
tiny9_testLocalLabs/: CMakeLists.txt  autorun.sh
tiny9_testLocalLabs/include/math/: power.hpp
tiny9_testLocalLabs/lib/: CMakeLists.txt
tiny9_testLocalLabs/src/: CMakeLists.txt
tiny_make_doc/: CMakeLists.txt  Doxyfile
tiny_make_doc/doc/doxygen/html/: graph_legend.html  index.html
tiny_make_doc/doc/doxygen/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex
tiny_make_doc/doc/doxygen/rtf/: dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  main_8cpp__incl.md5  refman.rtf
tiny_make_test/: CMakeLists.txt  main.cpp
